finished all the instructions

--- a/mypage.html
+++ b/mypage.html
@@ -10,33 +10,27 @@
 <!--  <h1>Welcome to John's website</h1>-->
 <!--  <p>This is where dreams come true</p>-->
 <!--  <button class="title-section-button" onclick="makeDreamComeTrue()">Make dream come true</button>-->
-  <h1 class="title-section-header">John Nnamchi</h1>
-  <p class="title-section-subtitle">Empowering Individuals Through Education</p>
+  <h1 class="title-section-header">Sharon Ndukuba</h1>
+  <p class="title-section-subtitle">Being  a creative In the tech space</p>
   <button class="title-section-button" onclick="makeDreamComeTrue()">COMBINE KNOWLEDGE WITH ACTION</button>
 </div>
 <div class="misc-section" id="aboutme">
   <div class="text-block-container">
     <h1>About Me</h1>
     <p class="aboutme-section-description" style="color: white;">
-      I am a biochemistry graduate now turned full-time Software Engineer at Bloomberg LP.
-      Throughout my life journey, I realized the true power that software programming and
-      computer engineering skills can give to you. So I created an online course aimed at
-      developing the ability to solve any problem in any domain, with software. With the right
-      guidance and direction, we all have the capacity to grow into the best version of
-      ourselves, live a life of genuine purpose, and impact the people we love. Stay tuned
-      to see the apps I will build below!
+      My name is Sharon a Computer Science student who loves building things that look good and work well. I enjoy front-end development using React and JavaScript, exploring UX thinking through Figma, and dabbling in graphics design whenever I get the chance. I like creative problem-solving, learning by doing, and working in spaces where I can grow both technically and artistically. Right now, I’m developing my skills through personal and collaborative projects, and looking for opportunities that challenge me and help me become a stronger creative technologist.
     </p>
     <div class="aboutme-icons">
-      <a href="https://www.linkedin.com/in/john-nnamchi-03797847/" target="_blank">
+      <a href="https://www.linkedin.com/in/sharon-ndukuba-585b06384/" target="_blank">
         <i class="aboutme-icon fab fa-linkedin-in"></i>
       </a>
-      <a href="https://www.instagram.com/johnnnamchi/" target="_blank">
+      <a href="https://www.instagram.com/sharon_dukuba/?hl=en" target="_blank">
         <i class="aboutme-icon fab fa-instagram"></i>
       </a>
-      <a href="https://www.facebook.com/john.nnamchi/" target="_blank">
+      <a href="" target="_blank">
         <i class="aboutme-icon fab fa-facebook-square"></i>
       </a>
-      <a href="mailto:john.nnamchi@simvo.io">
+      <a href="mailto:sharonndukuba@gmail.com">
         <i class="aboutme-icon far fa-envelope"></i>
       </a>
     </div>
